[package]
name = "social_bot_origin"
version = "3.0.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# dotenvy: fork mantenido de `dotenv` (RUSTSEC-2021-0141: dotenv sin mantener).
dotenvy = "0.15"
